# marketplace

./: .env-example  .env.example  .gitignore  .pre-commit-config.frontend.yaml  .pre-commit-config.yaml  Makefile  README.md  cypress.config.js  docker-compose.yml  package.json
backend/: .env-example  .gitignore  Dockerfile  docker-compose.test.yml  docker-compose.yml  manage.py  pyproject.toml
backend/apps/admin/: apps.py  sites.py
backend/apps/admin/tests/: conftest.py  test_site.py
backend/apps/category/: admin.py  filters.py  managers.py  models.py  serializers.py  urls.py  views.py
backend/apps/category/category_set/: __base__.py
backend/apps/category/data/: categories.json
backend/apps/category/migrations/: 0001_initial.py  0002_category_image.py  0003_category_statistics.py
backend/apps/category/tests/: conftest.py  test_admin_panel.py  test_api_views.py  test_managers.py  test_migrate.py  test_model.py
backend/apps/email/: apps.py  models.py  serializers.py  settings.py  tasks.py  urls.py  views.py
backend/apps/email/templates/: email_verification.html  reset_password.html
backend/apps/email/tests/: conftest.py  test_celery_tasks.py  test_email_api_view.py
backend/apps/filter/: admin.py  apps.py  forms.py  models.py
backend/apps/filter/migrations/: 0001_initial.py
backend/apps/filter/tests/: conftest.py  test_admin.py  test_filter_group_model.py  (+2 more)
backend/apps/user/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
backend/apps/user_auth/: apps.py  helpers.py  mixins.py  models.py  permissions.py  serializers.py  settings.py  signals.py  tasks.py  urls.py  validators.py  views.py
backend/apps/utils/: serializers.py  urls.py  views.py
backend/backend/settings/: base.py  prod.py
backend/config/: asgi.py  celery.py  conftest.py  docs.py  urls.py  wsgi.py
backend/config/settings/: base.py  dev.py  prod.py
backend/core/: asgi.py  celery.py  conftest.py  signals.py  urls.py  wsgi.py
backend/core/settings/: base.py  dev.py  prod.py  test.py
backend/src/: .env-example
(+194 files in other folders)
